Compiladores-master/segundaEntrega/src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    comentarioMultilinea
    comentarioUnilinea
    errorCadenaCaracteres
    errorComentarioMultilinea

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> CLASS_DECL_LIST
Rule 2     PROGRAMA -> epsilon
Rule 3     CLASS_DECL_LIST -> CLASS_DECL
Rule 4     CLASS_DECL_LIST -> CLASS_DECL CLASS_DECL_LIST
Rule 5     CLASS_DECL -> class id extends id { FIELD_OR_METHOD_DECL_LIST }
Rule 6     CLASS_DECL -> class id extends id { }
Rule 7     CLASS_DECL -> class id { FIELD_OR_METHOD_DECL_LIST }
Rule 8     CLASS_DECL -> class id { }
Rule 9     FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL
Rule 10    FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL FIELD_OR_METHOD_DECL_LIST
Rule 11    FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL
Rule 12    FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL FIELD_OR_METHOD_DECL_LIST
Rule 13    FIELD_DECL -> TYPE id ;
Rule 14    FIELD_DECL -> TYPE id LIST_AUX_IDS ;
Rule 15    LIST_AUX_IDS -> , id
Rule 16    LIST_AUX_IDS -> , id LIST_AUX_IDS
Rule 17    METHOD_DECL -> TYPE id ( ) BLOCK
Rule 18    METHOD_DECL -> TYPE id ( FORMALS ) BLOCK
Rule 19    METHOD_DECL -> void id ( ) BLOCK
Rule 20    METHOD_DECL -> void id ( FORMALS ) BLOCK
Rule 21    FORMALS -> TYPE id
Rule 22    FORMALS -> TYPE id , FORMALS
Rule 23    TYPE -> int
Rule 24    TYPE -> boolean
Rule 25    TYPE -> string
Rule 26    TYPE -> id
Rule 27    TYPE -> TYPE [ ]
Rule 28    BLOCK -> { }
Rule 29    BLOCK -> { VAR_DECL_STATEMENTS_LIST }
Rule 30    VAR_DECL_STATEMENTS_LIST -> VAR_DECL
Rule 31    VAR_DECL_STATEMENTS_LIST -> VAR_DECL VAR_DECL_STATEMENTS_LIST
Rule 32    VAR_DECL_STATEMENTS_LIST -> STATEMENT
Rule 33    VAR_DECL_STATEMENTS_LIST -> STATEMENT VAR_DECL_STATEMENTS_LIST
Rule 34    VAR_DECL -> TYPE id LIST_IDS_EXPRESSIONS ;
Rule 35    VAR_DECL -> TYPE id ;
Rule 36    VAR_DECL -> TYPE id = EXPRESSION LIST_IDS_EXPRESSIONS ;
Rule 37    VAR_DECL -> TYPE id = EXPRESSION ;
Rule 38    LIST_IDS_EXPRESSIONS -> , id
Rule 39    LIST_IDS_EXPRESSIONS -> , id = EXPRESSION
Rule 40    LIST_IDS_EXPRESSIONS -> , id LIST_IDS_EXPRESSIONS
Rule 41    LIST_IDS_EXPRESSIONS -> , id = EXPRESSION LIST_IDS_EXPRESSIONS
Rule 42    STATEMENT -> ASSIGN ;
Rule 43    STATEMENT -> CALL ;
Rule 44    STATEMENT -> return EXPRESSION ;
Rule 45    STATEMENT -> return ;
Rule 46    STATEMENT -> if ( EXPRESSION ) STATEMENT else STATEMENT
Rule 47    STATEMENT -> if ( EXPRESSION ) STATEMENT
Rule 48    STATEMENT -> while ( EXPRESSION ) STATEMENT
Rule 49    STATEMENT -> break ;
Rule 50    STATEMENT -> continue ;
Rule 51    STATEMENT -> BLOCK
Rule 52    ASSIGN -> LOCATION = EXPRESSION
Rule 53    LOCATION -> id
Rule 54    LOCATION -> EXPRESSION . id
Rule 55    LOCATION -> id [ EXPRESSION ]
Rule 56    CALL -> METHOD ( ACTUALS )
Rule 57    CALL -> METHOD ( )
Rule 58    METHOD -> id
Rule 59    METHOD -> EXPRESSION . id
Rule 60    ACTUALS -> EXPRESSION
Rule 61    ACTUALS -> EXPRESSION , ACTUALS
Rule 62    EXPRESSION -> LOCATION
Rule 63    EXPRESSION -> CALL
Rule 64    EXPRESSION -> this
Rule 65    EXPRESSION -> new id ( )
Rule 66    EXPRESSION -> new TYPE [ EXPRESSION ]
Rule 67    EXPRESSION -> EXPRESSION . length
Rule 68    EXPRESSION -> BINARY_EXPRESSION
Rule 69    EXPRESSION -> ! EXPRESSION
Rule 70    EXPRESSION -> - EXPRESSION
Rule 71    EXPRESSION -> LITERAL
Rule 72    EXPRESSION -> ( EXPRESSION )
Rule 73    BINARY_EXPRESSION -> EXPRESSION + EXPRESSION
Rule 74    BINARY_EXPRESSION -> EXPRESSION - EXPRESSION
Rule 75    BINARY_EXPRESSION -> EXPRESSION * EXPRESSION
Rule 76    BINARY_EXPRESSION -> EXPRESSION / EXPRESSION
Rule 77    BINARY_EXPRESSION -> EXPRESSION % EXPRESSION
Rule 78    BINARY_EXPRESSION -> EXPRESSION y EXPRESSION
Rule 79    BINARY_EXPRESSION -> EXPRESSION o EXPRESSION
Rule 80    BINARY_EXPRESSION -> EXPRESSION < EXPRESSION
Rule 81    BINARY_EXPRESSION -> EXPRESSION menorIgual EXPRESSION
Rule 82    BINARY_EXPRESSION -> EXPRESSION > EXPRESSION
Rule 83    BINARY_EXPRESSION -> EXPRESSION mayorIgual EXPRESSION
Rule 84    BINARY_EXPRESSION -> EXPRESSION comparador EXPRESSION
Rule 85    BINARY_EXPRESSION -> EXPRESSION noIgual EXPRESSION
Rule 86    LITERAL -> numero
Rule 87    LITERAL -> binario
Rule 88    LITERAL -> hexa
Rule 89    LITERAL -> cientifico
Rule 90    LITERAL -> cadenaCaracteres
Rule 91    LITERAL -> true
Rule 92    LITERAL -> false
Rule 93    LITERAL -> null
Rule 94    epsilon -> <empty>

Terminals, with rules where they appear

!                    : 69
%                    : 77
(                    : 17 18 19 20 46 47 48 56 57 65 72
)                    : 17 18 19 20 46 47 48 56 57 65 72
*                    : 75
+                    : 73
,                    : 15 16 22 38 39 40 41 61
-                    : 70 74
.                    : 54 59 67
/                    : 76
;                    : 13 14 34 35 36 37 42 43 44 45 49 50
<                    : 80
=                    : 36 37 39 41 52
>                    : 82
[                    : 27 55 66
]                    : 27 55 66
binario              : 87
boolean              : 24
break                : 49
cadenaCaracteres     : 90
cientifico           : 89
class                : 5 6 7 8
comentarioMultilinea : 
comentarioUnilinea   : 
comparador           : 84
continue             : 50
else                 : 46
error                : 
errorCadenaCaracteres : 
errorComentarioMultilinea : 
extends              : 5 6
false                : 92
hexa                 : 88
id                   : 5 5 6 6 7 8 13 14 15 16 17 18 19 20 21 22 26 34 35 36 37 38 39 40 41 53 54 55 58 59 65
if                   : 46 47
int                  : 23
length               : 67
mayorIgual           : 83
menorIgual           : 81
new                  : 65 66
noIgual              : 85
null                 : 93
numero               : 86
o                    : 79
return               : 44 45
string               : 25
this                 : 64
true                 : 91
void                 : 19 20
while                : 48
y                    : 78
{                    : 5 6 7 8 28 29
}                    : 5 6 7 8 28 29

Nonterminals, with rules where they appear

ACTUALS              : 56 61
ASSIGN               : 42
BINARY_EXPRESSION    : 68
BLOCK                : 17 18 19 20 51
CALL                 : 43 63
CLASS_DECL           : 3 4
CLASS_DECL_LIST      : 1 4
EXPRESSION           : 36 37 39 41 44 46 47 48 52 54 55 59 60 61 66 67 69 70 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85
FIELD_DECL           : 9 10
FIELD_OR_METHOD_DECL_LIST : 5 7 10 12
FORMALS              : 18 20 22
LIST_AUX_IDS         : 14 16
LIST_IDS_EXPRESSIONS : 34 36 40 41
LITERAL              : 71
LOCATION             : 52 62
METHOD               : 56 57
METHOD_DECL          : 11 12
PROGRAMA             : 0
STATEMENT            : 32 33 46 46 47 48
TYPE                 : 13 14 17 18 21 22 27 34 35 36 37 66
VAR_DECL             : 30 31
VAR_DECL_STATEMENTS_LIST : 29 31 33
epsilon              : 2

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . CLASS_DECL_LIST
    (2) PROGRAMA -> . epsilon
    (3) CLASS_DECL_LIST -> . CLASS_DECL
    (4) CLASS_DECL_LIST -> . CLASS_DECL CLASS_DECL_LIST
    (94) epsilon -> .
    (5) CLASS_DECL -> . class id extends id { FIELD_OR_METHOD_DECL_LIST }
    (6) CLASS_DECL -> . class id extends id { }
    (7) CLASS_DECL -> . class id { FIELD_OR_METHOD_DECL_LIST }
    (8) CLASS_DECL -> . class id { }

    $end            reduce using rule 94 (epsilon -> .)
    class           shift and go to state 2

    CLASS_DECL_LIST                shift and go to state 4
    CLASS_DECL                     shift and go to state 3
    PROGRAMA                       shift and go to state 5
    epsilon                        shift and go to state 1

state 1

    (2) PROGRAMA -> epsilon .

    $end            reduce using rule 2 (PROGRAMA -> epsilon .)


state 2

    (5) CLASS_DECL -> class . id extends id { FIELD_OR_METHOD_DECL_LIST }
    (6) CLASS_DECL -> class . id extends id { }
    (7) CLASS_DECL -> class . id { FIELD_OR_METHOD_DECL_LIST }
    (8) CLASS_DECL -> class . id { }

    id              shift and go to state 6


state 3

    (3) CLASS_DECL_LIST -> CLASS_DECL .
    (4) CLASS_DECL_LIST -> CLASS_DECL . CLASS_DECL_LIST
    (3) CLASS_DECL_LIST -> . CLASS_DECL
    (4) CLASS_DECL_LIST -> . CLASS_DECL CLASS_DECL_LIST
    (5) CLASS_DECL -> . class id extends id { FIELD_OR_METHOD_DECL_LIST }
    (6) CLASS_DECL -> . class id extends id { }
    (7) CLASS_DECL -> . class id { FIELD_OR_METHOD_DECL_LIST }
    (8) CLASS_DECL -> . class id { }

    $end            reduce using rule 3 (CLASS_DECL_LIST -> CLASS_DECL .)
    class           shift and go to state 2

    CLASS_DECL_LIST                shift and go to state 7
    CLASS_DECL                     shift and go to state 3

state 4

    (1) PROGRAMA -> CLASS_DECL_LIST .

    $end            reduce using rule 1 (PROGRAMA -> CLASS_DECL_LIST .)


state 5

    (0) S' -> PROGRAMA .



state 6

    (5) CLASS_DECL -> class id . extends id { FIELD_OR_METHOD_DECL_LIST }
    (6) CLASS_DECL -> class id . extends id { }
    (7) CLASS_DECL -> class id . { FIELD_OR_METHOD_DECL_LIST }
    (8) CLASS_DECL -> class id . { }

    extends         shift and go to state 8
    {               shift and go to state 9


state 7

    (4) CLASS_DECL_LIST -> CLASS_DECL CLASS_DECL_LIST .

    $end            reduce using rule 4 (CLASS_DECL_LIST -> CLASS_DECL CLASS_DECL_LIST .)


state 8

    (5) CLASS_DECL -> class id extends . id { FIELD_OR_METHOD_DECL_LIST }
    (6) CLASS_DECL -> class id extends . id { }

    id              shift and go to state 10


state 9

    (7) CLASS_DECL -> class id { . FIELD_OR_METHOD_DECL_LIST }
    (8) CLASS_DECL -> class id { . }
    (9) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL
    (10) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL FIELD_OR_METHOD_DECL_LIST
    (11) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL
    (12) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL FIELD_OR_METHOD_DECL_LIST
    (13) FIELD_DECL -> . TYPE id ;
    (14) FIELD_DECL -> . TYPE id LIST_AUX_IDS ;
    (17) METHOD_DECL -> . TYPE id ( ) BLOCK
    (18) METHOD_DECL -> . TYPE id ( FORMALS ) BLOCK
    (19) METHOD_DECL -> . void id ( ) BLOCK
    (20) METHOD_DECL -> . void id ( FORMALS ) BLOCK
    (23) TYPE -> . int
    (24) TYPE -> . boolean
    (25) TYPE -> . string
    (26) TYPE -> . id
    (27) TYPE -> . TYPE [ ]

    }               shift and go to state 20
    void            shift and go to state 13
    int             shift and go to state 16
    boolean         shift and go to state 17
    string          shift and go to state 11
    id              shift and go to state 18

    FIELD_DECL                     shift and go to state 12
    METHOD_DECL                    shift and go to state 14
    FIELD_OR_METHOD_DECL_LIST      shift and go to state 15
    TYPE                           shift and go to state 19

state 10

    (5) CLASS_DECL -> class id extends id . { FIELD_OR_METHOD_DECL_LIST }
    (6) CLASS_DECL -> class id extends id . { }

    {               shift and go to state 21


state 11

    (25) TYPE -> string .

    id              reduce using rule 25 (TYPE -> string .)
    [               reduce using rule 25 (TYPE -> string .)


state 12

    (9) FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL .
    (10) FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL . FIELD_OR_METHOD_DECL_LIST
    (9) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL
    (10) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL FIELD_OR_METHOD_DECL_LIST
    (11) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL
    (12) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL FIELD_OR_METHOD_DECL_LIST
    (13) FIELD_DECL -> . TYPE id ;
    (14) FIELD_DECL -> . TYPE id LIST_AUX_IDS ;
    (17) METHOD_DECL -> . TYPE id ( ) BLOCK
    (18) METHOD_DECL -> . TYPE id ( FORMALS ) BLOCK
    (19) METHOD_DECL -> . void id ( ) BLOCK
    (20) METHOD_DECL -> . void id ( FORMALS ) BLOCK
    (23) TYPE -> . int
    (24) TYPE -> . boolean
    (25) TYPE -> . string
    (26) TYPE -> . id
    (27) TYPE -> . TYPE [ ]

    }               reduce using rule 9 (FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL .)
    void            shift and go to state 13
    int             shift and go to state 16
    boolean         shift and go to state 17
    string          shift and go to state 11
    id              shift and go to state 18

    FIELD_DECL                     shift and go to state 12
    METHOD_DECL                    shift and go to state 14
    FIELD_OR_METHOD_DECL_LIST      shift and go to state 22
    TYPE                           shift and go to state 19

state 13

    (19) METHOD_DECL -> void . id ( ) BLOCK
    (20) METHOD_DECL -> void . id ( FORMALS ) BLOCK

    id              shift and go to state 23


state 14

    (11) FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL .
    (12) FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL . FIELD_OR_METHOD_DECL_LIST
    (9) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL
    (10) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL FIELD_OR_METHOD_DECL_LIST
    (11) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL
    (12) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL FIELD_OR_METHOD_DECL_LIST
    (13) FIELD_DECL -> . TYPE id ;
    (14) FIELD_DECL -> . TYPE id LIST_AUX_IDS ;
    (17) METHOD_DECL -> . TYPE id ( ) BLOCK
    (18) METHOD_DECL -> . TYPE id ( FORMALS ) BLOCK
    (19) METHOD_DECL -> . void id ( ) BLOCK
    (20) METHOD_DECL -> . void id ( FORMALS ) BLOCK
    (23) TYPE -> . int
    (24) TYPE -> . boolean
    (25) TYPE -> . string
    (26) TYPE -> . id
    (27) TYPE -> . TYPE [ ]

    }               reduce using rule 11 (FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL .)
    void            shift and go to state 13
    int             shift and go to state 16
    boolean         shift and go to state 17
    string          shift and go to state 11
    id              shift and go to state 18

    FIELD_DECL                     shift and go to state 12
    METHOD_DECL                    shift and go to state 14
    FIELD_OR_METHOD_DECL_LIST      shift and go to state 24
    TYPE                           shift and go to state 19

state 15

    (7) CLASS_DECL -> class id { FIELD_OR_METHOD_DECL_LIST . }

    }               shift and go to state 25


state 16

    (23) TYPE -> int .

    id              reduce using rule 23 (TYPE -> int .)
    [               reduce using rule 23 (TYPE -> int .)


state 17

    (24) TYPE -> boolean .

    id              reduce using rule 24 (TYPE -> boolean .)
    [               reduce using rule 24 (TYPE -> boolean .)


state 18

    (26) TYPE -> id .

    id              reduce using rule 26 (TYPE -> id .)
    [               reduce using rule 26 (TYPE -> id .)


state 19

    (13) FIELD_DECL -> TYPE . id ;
    (14) FIELD_DECL -> TYPE . id LIST_AUX_IDS ;
    (17) METHOD_DECL -> TYPE . id ( ) BLOCK
    (18) METHOD_DECL -> TYPE . id ( FORMALS ) BLOCK
    (27) TYPE -> TYPE . [ ]

    id              shift and go to state 27
    [               shift and go to state 26


state 20

    (8) CLASS_DECL -> class id { } .

    class           reduce using rule 8 (CLASS_DECL -> class id { } .)
    $end            reduce using rule 8 (CLASS_DECL -> class id { } .)


state 21

    (5) CLASS_DECL -> class id extends id { . FIELD_OR_METHOD_DECL_LIST }
    (6) CLASS_DECL -> class id extends id { . }
    (9) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL
    (10) FIELD_OR_METHOD_DECL_LIST -> . FIELD_DECL FIELD_OR_METHOD_DECL_LIST
    (11) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL
    (12) FIELD_OR_METHOD_DECL_LIST -> . METHOD_DECL FIELD_OR_METHOD_DECL_LIST
    (13) FIELD_DECL -> . TYPE id ;
    (14) FIELD_DECL -> . TYPE id LIST_AUX_IDS ;
    (17) METHOD_DECL -> . TYPE id ( ) BLOCK
    (18) METHOD_DECL -> . TYPE id ( FORMALS ) BLOCK
    (19) METHOD_DECL -> . void id ( ) BLOCK
    (20) METHOD_DECL -> . void id ( FORMALS ) BLOCK
    (23) TYPE -> . int
    (24) TYPE -> . boolean
    (25) TYPE -> . string
    (26) TYPE -> . id
    (27) TYPE -> . TYPE [ ]

    }               shift and go to state 29
    void            shift and go to state 13
    int             shift and go to state 16
    boolean         shift and go to state 17
    string          shift and go to state 11
    id              shift and go to state 18

    FIELD_DECL                     shift and go to state 12
    METHOD_DECL                    shift and go to state 14
    FIELD_OR_METHOD_DECL_LIST      shift and go to state 28
    TYPE                           shift and go to state 19

state 22

    (10) FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL FIELD_OR_METHOD_DECL_LIST .

    }               reduce using rule 10 (FIELD_OR_METHOD_DECL_LIST -> FIELD_DECL FIELD_OR_METHOD_DECL_LIST .)


state 23

    (19) METHOD_DECL -> void id . ( ) BLOCK
    (20) METHOD_DECL -> void id . ( FORMALS ) BLOCK

    (               shift and go to state 30


state 24

    (12) FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL FIELD_OR_METHOD_DECL_LIST .

    }               reduce using rule 12 (FIELD_OR_METHOD_DECL_LIST -> METHOD_DECL FIELD_OR_METHOD_DECL_LIST .)


state 25

    (7) CLASS_DECL -> class id { FIELD_OR_METHOD_DECL_LIST } .

    class           reduce using rule 7 (CLASS_DECL -> class id { FIELD_OR_METHOD_DECL_LIST } .)
    $end            reduce using rule 7 (CLASS_DECL -> class id { FIELD_OR_METHOD_DECL_LIST } .)


state 26

    (27) TYPE -> TYPE [ . ]

    ]               shift and go to state 31


state 27

    (13) FIELD_DECL -> TYPE id . ;
    (14) FIELD_DECL -> TYPE id . LIST_AUX_IDS ;
    (17) METHOD_DECL -> TYPE id . ( ) BLOCK
    (18) METHOD_DECL -> TYPE id . ( FORMALS ) BLOCK
    (15) LIST_AUX_IDS -> . , id
    (16) LIST_AUX_IDS -> . , id LIST_AUX_IDS

    ;               shift and go to state 35
    (               shift and go to state 32
    ,               shift and go to state 33

    LIST_AUX_IDS                   shift and go to state 34

state 28

    (5) CLASS_DECL -> class id extends id { FIELD_OR_METHOD_DECL_LIST . }

    }               shift and go to state 36


state 29

    (6) CLASS_DECL -> class id extends id { } .

    class           reduce using rule 6 (CLASS_DECL -> class id extends id { } .)
    $end            reduce using rule 6 (CLASS_DECL -> class id extends id { } .)


state 30

    (19) METHOD_DECL -> void id ( . ) BLOCK
    (20) METHOD_DECL -> void id ( . FORMALS ) BLOCK
    (21) FORMALS -> . TYPE id
    (22) FORMALS -> . TYPE id , FORMALS
    (23) TYPE -> . int
    (24) TYPE -> . boolean
    (25) TYPE -> . string
    (26) TYPE -> . id
    (27) TYPE -> . TYPE [ ]

    )               shift and go to state 37
    int             shift and go to state 16
    boolean         shift and go to state 17
    string          shift and go to state 11
    id              shift and go to state 18

    TYPE                           shift and go to state 38
    FORMALS                        shift and go to state 39

state 31

    (27) TYPE -> TYPE [ ] .

    id              reduce using rule 27 (TYPE -> TYPE [ ] .)
    [               reduce using rule 27 (TYPE -> TYPE [ ] .)


state 32

    (17) METHOD_DECL -> TYPE id ( . ) BLOCK
    (18) METHOD_DECL -> TYPE id ( . FORMALS ) BLOCK
    (21) FORMALS -> . TYPE id
    (22) FORMALS -> . TYPE id , FORMALS
    (23) TYPE -> . int
    (24) TYPE -> . boolean
    (25) TYPE -> . string
    (26) TYPE -> . id
    (27) TYPE -> . TYPE [ ]

    )               shift and go to state 40
    int             shift and go to state 16
    boolean         shift and go to state 17
    string          shift and go to state 11
    id              shift and go to state 18

    TYPE                           shift and go to state 38
    FORMALS                        shift and go to state 41

state 33

    (15) LIST_AUX_IDS -> , . id
    (16) LIST_AUX_IDS -> , . id LIST_AUX_IDS

    id              shift and go to state 42


state 34

    (14) FIELD_DECL -> TYPE id LIST_AUX_IDS . ;

    ;               shift and go to state 43


state 35

    (13) FIELD_DECL -> TYPE id ; .

    void            reduce using rule 13 (FIELD_DECL -> TYPE id ; .)
    int             reduce using rule 13 (FIELD_DECL -> TYPE id ; .)
    boolean         reduce using rule 13 (FIELD_DECL -> TYPE id ; .)
    string          reduce using rule 13 (FIELD_DECL -> TYPE id ; .)
    id              reduce using rule 13 (FIELD_DECL -> TYPE id ; .)
    }               reduce using rule 13 (FIELD_DECL -> TYPE id ; .)


state 36

    (5) CLASS_DECL -> class id extends id { FIELD_OR_METHOD_DECL_LIST } .

    class           reduce using rule 5 (CLASS_DECL -> class id extends id { FIELD_OR_METHOD_DECL_LIST } .)
    $end            reduce using rule 5 (CLASS_DECL -> class id extends id { FIELD_OR_METHOD_DECL_LIST } .)


state 37

    (19) METHOD_DECL -> void id ( ) . BLOCK
    (28) BLOCK -> . { }
    (29) BLOCK -> . { VAR_DECL_STATEMENTS_LIST }

    {               shift and go to state 44

    BLOCK                          shift and go to state 45

state 38

    (21) FORMALS -> TYPE . id
    (22) FORMALS -> TYPE . id , FORMALS
    (27) TYPE -> TYPE . [ ]

    id              shift and go to state 46
    [               shift and go to state 26


state 39

    (20) METHOD_DECL -> void id ( FORMALS . ) BLOCK

    )               shift and go to state 47


state 40

    (17) METHOD_DECL -> TYPE id ( ) . BLOCK
    (28) BLOCK -> . { }
    (29) BLOCK -> . { VAR_DECL_STATEMENTS_LIST }

    {               shift and go to state 44

    BLOCK                          shift and go to state 48

state 41

    (18) METHOD_DECL -> TYPE id ( FORMALS . ) BLOCK

    )               shift and go to state 49


state 42
